<resources>
    <string name="app_name">Eventified</string>
    <string name="title_activity_settings">Options</string>

    <!-- Preference Titles -->
    <string name="notification_header">Notifications</string>
    <string name="account_information_header">Account Information</string>

    <!-- Notification Preferences -->
    <string name="announcement_title">Club Announcements</string>
    <string name="announcement_summary">Allow clubs to send notifications</string>
    <string name="create_meeting_title">New Events</string>
    <string name="create_meeting_summary">Send notifications whenever a club posts a new event</string>
    <string name="cancel_meeting_title">Cancellations</string>
    <string name="cancel_meeting_summary">Send notifications whenever a club cancels an event</string>
    <string name="profile_update_title">Profile Updates</string>
    <string name="profile_update_summary">Sends notifications when your profile is updated</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>


    <!-- Notification Preferences -->
    <string name="share_title">Share Schedule</string>
    <string name="share_summary">Allow clubs to better understand when to best schedule meetings</string>

    <!-- Main Activity -->
    <string name="home_button_description">Home</string>
    <string name="search_button_description">Search</string>
    <string name="title_activity_login">Eventified</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account_instead">Create Account Instead</string>
    <string name="log_in_instead">Log In Instead</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Eventified</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Club Search</string>
    <string name="menu_eboard">Eboard Clubs</string>
    <string name="menu_member">Member Clubs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_calendar">Calendar</string>
    <string name="account_menu">Account</string>
    <string name="account_clubs">Clubs</string>
    <string name="club_search">Club Search</string>
    <string name="title_set_reminder">Unset Title</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_home">Temporary Home Fragment Test</string>
    <string name="hello_search">Temporary Search Fragment Test</string>
    <string name="hello_club_list">Temporary Club List Fragment Test</string>
    <string name="hello_club_view">Temporary Club View Fragment Test</string>
    <string name="hello_profile">Temporary Profile Fragment Test</string>
    <string name="hello_calendar">Temporary Calendar Fragment Test</string>
    <string name="hello_settings">Temporary Settings Fragment Test</string>
    <string name="search_clubs">Search Clubs</string>
    <string name="example_description">Bees are insects with wings closely related to wasps and ants, known for their role in pollination and, in the case of the best-known bee species, the</string>
    <string name="time_placeholder">Time AM</string>
    <string name="date_placeholder">DA/TE</string>
    <string name="club_logo_description">CLub Logo</string>
    <string name="club_name_placeholder">Club Name</string>
    <string name="placeholder_time">12:00:00</string>
    <string name="placeholder_short_event_description">Short Event Description</string>
    <string name="placeholder_location">--------Location--------</string>
    <string name="example_description_2">A wasp is any insect of the narrow-waisted suborder Apocrita of the order Hymenoptera which is neither a bee nor an ant. The wasps do not constitute a clade.</string>
    <string name="join">Join</string>
    <string name="event_title">Event Title</string>
    <string name="next_meeting">Next Meeting:</string>
    <string name="confirm_your_email">Confirm Your Email</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="continue_button">Continue</string>
    <string name="search">Search</string>
    <string name="club_banner">Club Banner</string>
    <string name="upcoming_events">Upcoming Events:</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_club">Create Club</string>
    <string name="save">Save</string>
    <string name="add_event">Add Event</string>
    <string name="view">View</string>
    <string name="delete_event">Delete Event</string>
    <string name="registered">Registered:</string>
    <string name="input_time_hint">Input Time (HH:MM:SS)</string>
    <string name="eventified_logo">Eventified Logo</string>
    <string name="input_date">Input Date (YYYY-MM-DD)</string>
    <string name="create_event">Create Event</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="event_logo">Event Owner Logo</string>


</resources>