<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClubOwnerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/title_set_reminder" />

            <TextView
                android:id="@+id/club_name"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/club_name_placeholder"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/bannerImageView" />

            <TextView
                android:id="@+id/next_meeting_date"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:text="@string/date_placeholder"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/next_meeting_text"
                app:layout_constraintTop_toBottomOf="@+id/next_meeting_text" />

            <TextView
                android:id="@+id/next_meeting_text"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/next_meeting"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/cardView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bannerImageView" />


            <TextView
                android:id="@+id/next_meeting_time"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:text="@string/time_placeholder"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/next_meeting_date"
                app:layout_constraintTop_toBottomOf="@+id/next_meeting_date" />

            <TextView
                android:id="@+id/club_location"
                android:layout_width="127dp"
                android:layout_height="32dp"
                android:text="@string/placeholder_location"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/club_name"
                app:layout_constraintStart_toStartOf="@+id/club_name"
                app:layout_constraintTop_toBottomOf="@+id/club_name" />

            <ImageView
                android:id="@+id/bannerImageView"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/club_banner"
                android:scaleType="centerCrop"
                android:src="@drawable/eventified_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="-32dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bannerImageView">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="60dp">

                    <ImageView
                        android:id="@+id/club_logo"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/club_logo_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/sym_def_app_icon" />


                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/club_desc_cardView"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="54dp"
                app:cardBackgroundColor="#ffB6C7E0"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/club_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:text="@string/example_description_2"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SmallSp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/Upcoming_events_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/upcoming_events"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/club_desc_cardView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/events_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Upcoming_events_text" />

            <Button
                android:id="@+id/add_new_event"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:onClick="onAddEvent"
                android:text="@string/add_event"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/events_recycler" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>