<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#ffB6C7E0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="18dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="60dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/club_logo_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/sym_def_app_icon" />


                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/date_placeholder"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:text="@string/time_placeholder"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:text="@string/placeholder_location"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="325dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:padding="2dp"
                android:text="@string/example_description"
                android:textColor="#000000"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="191dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:text="@string/club_name_placeholder"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="191dp"
                android:layout_height="32dp"
                android:text="@string/event_title"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/button2"
                android:layout_width="64dp"
                android:layout_height="31dp"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:elevation="20dp"
                android:text="Register"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="@+id/button2"
                app:layout_constraintStart_toStartOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>